crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__staged_trace.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
helper#3 0 (trace "later argument" in 42)
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_3
    [[helper_3 (con integer 0)]
      (force
        [[(force (builtin trace)) (con string "later argument")]
          (delay (con integer 42))])])
    (lam unused_1 (lam used_2 used_2))])
--- optimized Core
trace "later argument" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "later argument")] (delay (con integer 42))]))
    (force (builtin trace))])
--- isolated pass
--- core before
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
let anf#5 : int -> int = helper#3 0 in
let anf#6 : int = trace "later argument" in 42 in
anf#5 anf#6
--- uplc before
(program 1.1.0
  [(lam helper_3
    [(lam anf_5
      [(lam anf_6 [anf_5 anf_6])
        (force
          [[(force (builtin trace)) (con string "later argument")]
            (delay (con integer 42))])])
      [helper_3 (con integer 0)]])
    (lam unused_1 (lam used_2 used_2))])
--- core after
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
let anf#5 : int -> int = helper#3 0 in
let anf#6 : int = trace "later argument" in 42 in
anf#5 anf#6
--- uplc after
(program 1.1.0
  [(lam helper_3
    [(lam anf_5
      [(lam anf_6 [anf_5 anf_6])
        (force
          [[(force (builtin trace)) (con string "later argument")]
            (delay (con integer 42))])])
      [helper_3 (con integer 0)]])
    (lam unused_1 (lam used_2 used_2))])
--- result
(con integer 42)
--- logs
["later argument"]
