crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__type_views.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\", pretty(root),\npretty(after))"
---
--- core before
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
helper#3 0 42
--- core after
let helper#3 : int -> int = \used#2 : int -> used#2 in
helper#3 42
